--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,118 @@
-body {
-            background-color: #EAF6F6;
-}
 
-hr {
-            border-style: none;
-            border-color: grey;
-            border-top-style: dotted;
-            border-width: 5px;
-            width: 7%;
+body {
+    margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-weight: 900;
+    color: #6E2142;
+    background-color: #90AACB;
 }
 
 h1 {
-    color: hsl(210, 100%, 50%);
+    font-size: 5.625rem;
+    font-family: 'Sacramento', cursive;
+    color: #1C0A00;
+    line-height: 2;
+    margin: 50px auto 0 auto;
 }
 
 h2 {
-    color: #66BFBF;
+    font-size: 2.5rem;
+    font-family: 'Montserrat', sans-serif;
+    color: #1C0A00;
+    font-weight: normal;
 }
 
 h3 {
-    color: #66BFBF;
+    font-family: 'Montserrat', sans-serif;
+    color: #470D21;
+}
+
+div {
+    background-color: #90AACB;
+}
+
+.profile {
+    margin: auto 200px auto 200px;
+}
+
+.top {
+    background-color: #90AACB;
+    position: relative;
+    padding-top: 100px;
+}
+
+.python {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+    width: 15%;
+    height: auto;
+}
+
+.problem-solving {
+    position: absolute;
+    left: 300px;
+    bottom: 600px;
+    width: 10%;
+    height: auto;
+}
+
+.volcano {
+    width: 40%;
+    height: auto;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.images {
+    width: 25%;
+    height: auto;
+}
+
+.images2 {
+    width: 25%;
+    height: auto;
+    float: left;
+    margin-right: 30px;
+}
+
+.images3 {
+    width: 25%;
+    height: auto;
+    float: right;
+    margin-left: 30px;
+}
+
+
+#subheader {
+    margin-top: 0;
+}
+
+#accomplishment-row1 {
+    width: 50%;
+    margin: 150px auto 50px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+#accomplishment-row2 {
+    width: 50%;
+    margin: 150px auto 150px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+#copyright {
+    font-size: .9rem;
+    padding-top: 20px;
+}
+
+#icons {
+    font-size: .60rem;
 }
