--- a/styles.css
+++ b/styles.css
@@ -28,18 +28,50 @@ h3 {
     color: #470D21;
 }
 
-div {
-    background-color: #90AACB;
+hr {
+            border-style: none;
+            border-color: grey;
+            border-top-style: dotted;
+            border-width: 5px;
+            width: 7%;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+
+a:visited {
+    text-decoration: none;
+}
+
+
+a:hover {
+    text-decoration: none;
+}
+
+
+a:active {
+    text-decoration: none;
 }
 
 .profile {
     margin: auto 200px auto 200px;
 }
 
-.top {
+.top-container {
     background-color: #90AACB;
     position: relative;
     padding-top: 100px;
+}
+
+.middle-container {
+    background-color: white;
+    padding-top: 75px;
+}
+
+.bottom-container {
+    padding-top: 25px;
 }
 
 .python {
@@ -89,6 +121,47 @@ div {
     margin-left: 30px;
 }
 
+.contact-me {
+    padding-bottom: 75px;
+}
+
+.btn {
+  background: #A1CAE2;
+  background-image: -webkit-linear-gradient(top, #A1CAE2, #046582);
+  background-image: -moz-linear-gradient(top, #A1CAE2, #046582);
+  background-image: -ms-linear-gradient(top, #A1CAE2, #046582);
+  background-image: -o-linear-gradient(top, #A1CAE2, #046582);
+  background-image: linear-gradient(to bottom, #A1CAE2, #046582);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  font-weight: 525;
+}
+
+.btn:hover {
+  background: #046582;
+  background-image: -webkit-linear-gradient(top, #046582, #45526C);
+  background-image: -moz-linear-gradient(top, #046582, #45526C);
+  background-image: -ms-linear-gradient(top, #046582, #45526C);
+  background-image: -o-linear-gradient(top, #046582, #45526C);
+  background-image: linear-gradient(to bottom, #046582, #45526C);
+  text-decoration: none;
+}
+
+.footer-link {
+    padding-left: 50px;
+}
+
+#bio {
+    width: 75%;
+    margin: 25px auto 50px auto;
+    line-height: 2;
+}
 
 #subheader {
     margin-top: 0;
@@ -109,8 +182,10 @@ div {
 }
 
 #copyright {
-    font-size: .9rem;
+    font-size: .8rem;
     padding-top: 20px;
+    color: white;
+    font-weight: 350;
 }
 
 #icons {
