--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,8 @@ hr {
             border-top-style: dotted;
             border-width: 5px;
             width: 7%;
+            margin-top: 100px;
+            margin-bottom: 100px;
 }
 
 a {
@@ -74,7 +76,7 @@ a:active {
 
 .middle-container {
     background-color: white;
-    padding-top: 75px;
+    padding-top: 125px;
 }
 
 .bottom-container {
@@ -168,6 +170,7 @@ a:active {
     width: 75%;
     margin: 25px auto 50px auto;
     line-height: 2;
+    padding-top: 50px;
 }
 
 #subheader {
